# signal-digest

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.codex/: config.toml
backend/: .env.example  README.md  pyproject.toml  requirements.txt  test_ai_processing.py  test_topic_brief_batching.py
backend/alembic/: env.py
backend/alembic/versions/: 3b9f3c4a7f2b_app_settings.py  4f2b0a6f3d8a_connectors_and_endpoints.py  6a61ccd1dfdd_initial_schema.py  b69ddf1c3772_add_topic_briefs.py
backend/app/: __init__.py  config.py  database.py  dev.py  main.py
backend/app/llm/: README.md  __init__.py  config.py  exceptions.py  factory.py  registry.py
backend/app/llm/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  openrouter.py
backend/app/models/: __init__.py  ai_extraction.py  app_settings.py  brief.py  brief_item.py  connector_query.py  content_item.py  endpoint.py  run.py  topic.py  topic_assignment.py  topic_brief.py
backend/app/routers/: briefs.py  endpoints.py  explore.py  runs.py  settings.py  topics.py
backend/app/schemas/: __init__.py  ai.py  brief.py  content_item.py  endpoint.py  run.py  settings.py  topic.py  topic_brief.py
backend/app/services/: brief_builder.py  run_progress.py
backend/app/services/ai/: background.py  base.py  classifier.py  constants.py  extractor.py  orchestrator.py  prompts.py  task_utils.py  topic_brief_generator.py  video_extractor.py
backend/app/services/ingestion/: base.py  constants.py  orchestrator.py  rss.py  tavily.py  twitter.py  youtube.py
backend/scripts/: check_x_access.py  g3yt.py
(+22 files in other folders)
